--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -4,6 +4,8 @@ body {
 }
 a {color:#BE9B7B;}
 nav {background-color:#FFF4E6;}
+nav {padding: 10px}
+nav {margin-bottom: 30px;}
 nav a {
     color: #854442;
 }
