--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -3,10 +3,13 @@ body {
     background-color:#FFF4E6;
 }
 a {color:#BE9B7B;}
-nav {background-color:#FFF4E6;}
-nav {padding: 10px}
-nav {margin-bottom: 30px;}
+nav {
+    background-color:#c3a47c;
+    padding: 10px;
+    margin-bottom: 30px;
+}
 nav a {
     color: #854442;
+    text-decoration: none;
 }
-nav a:hover {color: #ffffff9b;}
+nav a:hover {color: #102f679e;}
