--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -16,7 +16,9 @@ nav a {
 }
 .evenrow {background-color: #d5e9f2;}
 
-.column3, .column4 {flex-basis: 50%;}
+.column3, .column4 {
+    flex-basis: 50%;
+}
 
 .column1, .column2 {float: left;}
 .column1 {padding-right: 30px;}
