--- a/projects/project6/styles.css
+++ b/projects/project6/styles.css
@@ -109,3 +109,11 @@ footer p {
         padding: 15px 10px 30px;
     }
 }
+
+.influencer-img {
+    width: 350px;
+    height: auto;
+    border-radius: 6px;
+    display: block;
+    margin-bottom: 10px;
+}
