--- a/projects/project6/styles.css
+++ b/projects/project6/styles.css
@@ -59,6 +59,7 @@ img {
 
 .influencer-img {
     width: 350px;
+    max-width: 350px;
     height: auto;
     border-radius: 6px;
     display: block;
