--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -2,7 +2,7 @@ body {
     color: #4B3832;
     background-color:#FFF4E6;
 }
-a {color:#674E32;}
+a {color:#BE9B7B;}
 nav {background-color:#c3a47c;}
 nav a {color:#FFF4E6}
 nav a:hover {background-color: #102f679e;}
@@ -14,6 +14,11 @@ nav a {
     color: #854442;
     text-decoration: none;
 }
+
+.skip {
+    color: #5C3D2E;  
+}
+
 
 @media screen and (max-width: 760px){
     nav a {
