--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -2,7 +2,7 @@ body {
     color: #4B3832;
     background-color:#FFF4E6;
 }
-a {color:#BE9B7B;}
+a {color:#221811;}
 nav {background-color:#c3a47c;}
 nav a {color:#FFF4E6}
 nav a:hover {
