--- a/projects/project6/styles.css
+++ b/projects/project6/styles.css
@@ -6,6 +6,13 @@ body {
     background-color:#FFF4E6;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+
 a {color:#BE9B7B;}
 
 a:hover {text-decoration: underline;}
